--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@vue/cli-plugin-babel": "^3.4.0",
     "@vue/cli-plugin-eslint": "^3.4.0",
     "@vue/cli-service": "^3.4.0",
+    "axios": "^0.18.0",
     "babel-eslint": "^10.0.1",
     "element-ui": "^2.5.4",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
     "github-markdown-css": "^3.0.1",
     "node-sass": "^4.9.0",
+    "qs": "^6.6.0",
     "sass-loader": "^7.1.0",
     "vue-markdown": "^2.2.4",
     "vue-template-compiler": "^2.5.21"
