--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "github-markdown-css": "^3.0.1",
     "node-sass": "^4.9.0",
+    "prismjs": "^1.15.0",
     "qs": "^6.6.0",
     "sass-loader": "^7.1.0",
     "vue-markdown": "^2.2.4",
