--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,11 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw*
+
+public/api
+public/node_modules
+public/config.local.json
+
+docs/api
+docs/node_modules
+docs/config.local.json
