--- a/docs/config.json
+++ b/docs/config.json
@@ -1,7 +1,7 @@
 {
-  "routes": "../article/api/routes.json",
+  "routes": "../article/docs/api/routes.json",
   "server": {
-    "path": "../article/md/",
+    "path": "../article/docs/md/",
     "ext": ".md"
   }
 }
